--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -55,3 +55,26 @@
  .search-form p {
    margin: 1px;
  }
+
+ .user-callbacks {
+   border-left: 1px solid #ccc;
+   padding: 0;
+ }
+
+ .user-callbacks h3 {
+   padding-left: 10px;
+ }
+
+ .user-callbacks div {
+   border-top: 1px solid #eee;
+   margin: 0;
+   padding: 5px;
+ }
+
+ .user-callbacks div p {
+   margin: 2px;
+ }
+
+ .cb-campaign {
+   color: #666;
+ }
