--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -10,7 +10,14 @@
 
     <%= render partial: 'search_results/search_form' %>
   </div>
-  <div class="col-md-4">
-    <h3>Callbacks</h3>
+  <div class="col-md-4 user-callbacks">
+    <h3>Callbacks: <%= "none" if Callback.where(user: @user).count == 0 %></h3>
+    <% Callback.where(user: @user).each do |cb| %>
+      <div>
+        <p><%= link_to cb.lead_name1, campaign_lead_path(cb.lead_campaign_id, cb.lead) %></p>
+        <p class="cb-campaign"><%= "#{cb.lead_campaign.name}" %></p>
+        <p><%= "#{cb.notes}" %></p>
+      </div>
+    <% end %>
   </div>
 </div>
