Showing callback info on user and lead screens

--- a/app/assets/stylesheets/callbacks.scss
+++ b/app/assets/stylesheets/callbacks.scss
@@ -1,3 +1,11 @@
 // Place all the styles related to the Callbacks controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+#show-callback h3 {
+  margin-top: 0;
+}
+
+#show-callback p {
+  margin: 5px;
+}
