--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -21,7 +21,7 @@
    font-family: 'Varela Round', sans-serif;
  }
 
- h1, h2, h3, h4, h5, h6, h1 * {
+ h1, h2, h3, h4, h5, h6, h1 *, h2 *, h3 * {
    font-family: 'Ubuntu', sans-serif;
  }
 
@@ -73,6 +73,11 @@
 
  .user-callbacks div p {
    margin: 2px;
+ }
+
+ .cb-name {
+   font-size: 120%;
+   font-weight: bold;
  }
 
  .cb-campaign {
