--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -14,9 +14,9 @@
     <h3>Callbacks: <%= "none" if Callback.where(user: @user).count == 0 %></h3>
     <% Callback.where(user: @user).each do |cb| %>
       <div>
-        <p><%= link_to cb.lead_name1, campaign_lead_path(cb.lead_campaign_id, cb.lead) %></p>
-        <p class="cb-campaign"><%= "#{cb.lead_campaign.name}" %></p>
-        <p><%= "#{cb.notes}" %></p>
+        <p class="cb-name"><%= link_to cb.lead_name1, campaign_lead_path(cb.lead_campaign_id, cb.lead) %></p>
+        <p class="cb-campaign"><%= "#{cb.lead_campaign.name}  #{cb.lead_source_code}" %></p>
+        <p><strong>CB: <%= cb.time.strftime('%m/%d') %></strong> <%= "#{cb.notes}" %></p>
       </div>
     <% end %>
   </div>
