--- a/app/views/recalls/new.html.erb
+++ b/app/views/recalls/new.html.erb
@@ -1,12 +1,14 @@
 <div id="show-callback">
-  <h3>New Callback:</h3>
-  <%= form_for Callback.new do |f| %>
+  <h3>Make a Callback:</h3>
+  <%= form_for Recall.new do |f| %>
+    <%= f.hidden_field :lead, :value => lead %>
     <div class="form-group">
       <%= f.label :notes %>
       <%= f.text_area :notes %>
     </div>
     <div class="form-group">
-      <%= f.submit "New Callback" %>
+      <%= f.submit "Save", class: 'btn btn-success' %>
     </div>
   <% end %>
+  <%= lead %>
 </div>
