--- a/app/views/recalls/new.html.erb
+++ b/app/views/recalls/new.html.erb
@@ -1,7 +1,7 @@
 <div id="show-callback">
   <h3>Make a Callback:</h3>
   <%= form_for Recall.new do |f| %>
-    <%= f.hidden_field :lead, :value => lead %>
+    <%= f.hidden_field :current_lead_id, :value => lead.id  %>
     <div class="form-group">
       <%= f.label :notes %>
       <%= f.text_area :notes %>
@@ -10,5 +10,4 @@
       <%= f.submit "Save", class: 'btn btn-success' %>
     </div>
   <% end %>
-  <%= lead %>
 </div>
