Datepicker and Callback creation

--- a/app/assets/stylesheets/leads.scss
+++ b/app/assets/stylesheets/leads.scss
@@ -66,3 +66,13 @@
 .day_lead {
   color: #c90;
 }
+
+#show-callback {
+  border: 1px solid #BBE4F2;
+  background: #EBF2F5;
+  padding: 10px;
+}
+
+#show-callback h3 {
+  color: #69A2B5;
+}
