--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -12,6 +12,7 @@
  *
  *= require_tree .
  *= require_self
+ *= require bootstrap-datepicker3
  */
 
  @import "bootstrap-sprockets";
@@ -54,6 +55,10 @@
 
  .search-form p {
    margin: 1px;
+ }
+
+ .form-group label {
+   display: block;
  }
 
  .user-callbacks {
