--- a/app/views/recalls/new.html.erb
+++ b/app/views/recalls/new.html.erb
@@ -1,13 +1,22 @@
-<div id="show-callback">
-  <h3>Make a Callback:</h3>
+
   <%= form_for Recall.new do |f| %>
-    <%= f.hidden_field :current_lead_id, :value => lead.id  %>
-    <div class="form-group">
-      <%= f.label :notes %>
-      <%= f.text_area :notes %>
+<div id="show-callback">
+  <h3>Callback: <%= f.text_field :time, "data-provide" => 'datepicker' %></h3>
+  <div class="row">
+    <div class="col-md-5">
+      <%= f.hidden_field :current_lead_id, :value => lead.id  %>
+
+      <div class="form-group">
+        <%= f.label :notes, 'Notes:' %>
+        <%= f.text_area :notes %>
+      </div>
     </div>
-    <div class="form-group">
-      <%= f.submit "Save", class: 'btn btn-success' %>
+    <div class="col-md-4">
+      <div class="form-group">
+        <%= f.submit "Save Callback", class: 'btn btn-primary' %>
+      </div>
     </div>
-  <% end %>
+  </div>
 </div>
+
+<% end %>
