--- a/app/views/recalls/show.html.erb
+++ b/app/views/recalls/show.html.erb
@@ -1,5 +1,8 @@
 <div id="show-callback">
-  <h3><%= link_to callback.user_nickname, profile_path(callback.user) %>'s Callback:</h3>
-  <p><strong>Date:</strong> &nbsp; <%= callback.time.strftime('%a, %b %d') %></p>
-  <p><strong>Notes:</strong> &nbsp; <%= callback.notes %></p>
+  <h3><%= link_to callback.user_nickname, profile_path(callback.user) %>: <%= callback.time.strftime('%b %d') %></h3>
+  <div class="row">
+    <div class="col-md-4">
+      <p><strong>Notes:</strong> &nbsp; <%= callback.notes %></p>
+    </div>
+  </div>
 </div>
