--- a/app/views/recalls/show.html.erb
+++ b/app/views/recalls/show.html.erb
@@ -1,8 +1,24 @@
 <div id="show-callback">
-  <h3><%= link_to callback.user_nickname, profile_path(callback.user) %>: <%= callback.time.strftime('%b %d') %></h3>
   <div class="row">
-    <div class="col-md-4">
+    <div class="col-md-6">
+      <h3><%= link_to callback.user_nickname, profile_path(callback.user) %>: <%= callback.time.strftime('%b %d') %></h3>
       <p><strong>Notes:</strong> &nbsp; <%= callback.notes %></p>
+    </div>
+    <div class="col-md-6 edit">
+      <%= form_for callback do |f| %>
+        <%= f.hidden_field :current_lead_id, :value => lead.id  %>
+        <div class="form-group">
+          <%= f.label :time, 'Update Date:' %>
+          <%= f.text_field :time, "data-provide" => 'datepicker' %>
+        </div>
+        <div class="form-group">
+          <%= f.label :notes, 'Update Notes:' %>
+          <%= f.text_area :notes %>
+        </div>
+        <div class="form-group">
+          <%= f.submit "Update", class: 'btn btn-primary' %>
+        </div>
+      <% end %>
     </div>
   </div>
 </div>
