--- a/app/views/recalls/new.html.erb
+++ b/app/views/recalls/new.html.erb
@@ -1,9 +1,13 @@
 <%= form_for Recall.new do |f| %>
   <div id="show-callback">
-    <h3>Callback: <%= f.text_field :time, "data-provide" => 'datepicker' %></h3>
+    <h3>Callback:</h3>
     <div class="row">
       <div class="col-md-5">
         <%= f.hidden_field :current_lead_id, :value => lead.id  %>
+        <div class="form-group">
+          <%= f.label :time, 'CB Date:' %>
+          <%= f.date_field :time %>
+        </div>
         <div class="form-group">
           <%= f.label :notes, 'Notes:' %>
           <%= f.text_area :notes %>
