--- a/app/views/recalls/show.html.erb
+++ b/app/views/recalls/show.html.erb
@@ -1,7 +1,7 @@
 <div id="show-callback">
   <div class="row">
     <div class="col-md-6">
-      <h3><%= link_to callback.user_nickname, profile_path(callback.user) %>: <%= callback.time.strftime('%b %d') %></h3>
+      <h3><%= link_to callback.user_nickname, profile_path(callback.user) %>: CB <%= callback.time.strftime('%-m/%-d') %></h3>
       <p><strong>Notes:</strong> &nbsp; <%= callback.notes %></p>
     </div>
     <div class="col-md-6 edit">
@@ -9,7 +9,7 @@
         <%= f.hidden_field :current_lead_id, :value => lead.id  %>
         <div class="form-group">
           <%= f.label :time, 'Update Date:' %>
-          <%= f.text_field :time, "data-provide" => 'datepicker' %>
+          <%= f.date_field :time %>
         </div>
         <div class="form-group">
           <%= f.label :notes, 'Update Notes:' %>
