--- a/app/views/recalls/new.html.erb
+++ b/app/views/recalls/new.html.erb
@@ -6,7 +6,7 @@
         <%= f.hidden_field :current_lead_id, :value => lead.id  %>
         <div class="form-group">
           <%= f.label :time, 'CB Date:' %>
-          <%= f.date_field :time %>
+          <%= f.date_field :time, :value => Date.today %>
         </div>
         <div class="form-group">
           <%= f.label :notes, 'Notes:' %>
