--- a/app/views/recalls/show.html.erb
+++ b/app/views/recalls/show.html.erb
@@ -3,22 +3,31 @@
     <div class="col-md-6">
       <h3><%= link_to callback.user_nickname, profile_path(callback.user) %>: CB <%= callback.time.strftime('%-m/%-d') %></h3>
       <p><strong>Notes:</strong> &nbsp; <%= callback.notes %></p>
-    </div>
-    <div class="col-md-6 edit">
-      <%= form_for callback do |f| %>
-        <%= f.hidden_field :current_lead_id, :value => lead.id  %>
-        <div class="form-group">
-          <%= f.label :time, 'Update Date:' %>
-          <%= f.date_field :time %>
-        </div>
-        <div class="form-group">
-          <%= f.label :notes, 'Update Notes:' %>
-          <%= f.text_area :notes %>
-        </div>
-        <div class="form-group">
-          <%= f.submit "Update", class: 'btn btn-primary' %>
-        </div>
+      <% unless callback.user == current_user %>
+        <%= form_for callback do |f| %>
+          <%= f.hidden_field :current_user_id, :value => current_user.id %>
+          <%= f.submit "Transfer to You", class: 'btn btn-primary-outline' %>
+        <% end %>
       <% end %>
     </div>
+    <% if callback.user == current_user %>
+      <div class="col-md-6 edit">
+        <%= form_for callback do |f| %>
+          <%= f.hidden_field :current_lead_id, :value => lead.id  %>
+          <div class="form-group">
+            <%= f.label :time, 'Update Date:' %>
+            <%= f.date_field :time %>
+          </div>
+          <div class="form-group">
+            <%= f.label :notes, 'Update Notes:' %>
+            <%= f.text_area :notes %>
+          </div>
+          <div class="form-group">
+            <%= f.submit "Update", class: 'btn btn-primary' %>
+            <%= link_to "Remove", callback, method: :delete, class: 'btn btn-danger', data: { confirm: 'Are you sure you want to give up this callback?' } %>
+          </div>
+        <% end %>
+      </div>
+    <% end %>
   </div>
 </div>
