--- a/app/views/leads/index.html.erb
+++ b/app/views/leads/index.html.erb
@@ -8,3 +8,8 @@
     </li>
   <% end %>
 </ul>
+
+<%= form_tag import_leads_path, multipart: true do %>
+  <%= file_field_tag :file %>
+  <%= submit_tag "Upload" %>
+<% end %>
