--- a/app/assets/stylesheets/campaigns.scss
+++ b/app/assets/stylesheets/campaigns.scss
@@ -13,3 +13,8 @@
   font-size: 120%;
   padding: 5px 10px 5px 5px;
 }
+
+.admin-options h3 {
+  border-top: 1px solid #ccc;
+  padding-top: 5px; 
+}
