--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -9,6 +9,15 @@
     <hr/>
 
     <%= render partial: 'search_results/search_form' %>
+
+    <hr/>
+
+    <h3>Your Sales:</h3>
+    <ul>
+      <% Sale.where(user: @user).each do |sale| %>
+        <li><%= "#{sale.date.strftime("%-m/%-d")}: #{sale.lead.name1}, $#{sale.amount}" %></li>
+      <% end %>
+    </ul>
   </div>
   <div class="col-md-4 user-callbacks">
     <h3>Callbacks: <%= "none" if Recall.where(user: @user).count == 0 %></h3>
