--- a/app/assets/stylesheets/leads.scss
+++ b/app/assets/stylesheets/leads.scss
@@ -82,5 +82,10 @@
 }
 
 #show-callback .btn {
-  margin-right: 20px; 
+  margin-right: 20px;
+}
+
+.saleform {
+  display: block;
+  padding: 10px 0;
 }
