--- a/app/views/campaigns/_lead_breakdown.html.erb
+++ b/app/views/campaigns/_lead_breakdown.html.erb
@@ -6,7 +6,7 @@
     <% sources(@campaign).each do |code| %>
       <% if all_leads(@campaign, code).find { |l| l.recall.nil? } %>
         <tr>
-          <td><%= link_to code, campaign_lead_path(@campaign, all_leads(@campaign, code).find { |l| l.recall.nil? }) %>:</td>
+          <td><%= link_to code, campaign_lead_path(@campaign, all_leads(@campaign, code).find { |l| l.recall.nil? && l.sale.nil? && l.no.nil? }) %>:</td>
           <td><%= amt_leads(@campaign, code) %></td>
           <td><%= all_leads(@campaign, code).average(:dial_count).floor %></td>
         </tr>
@@ -14,7 +14,7 @@
     <% end %>
     <% if amt_day_leads(@campaign) > 0 %>
       <tr>
-        <td><%= link_to "Day Leads", campaign_lead_path(@campaign, all_day_leads(@campaign).find { |l| l.recall.nil? }) %>:</td>
+        <td><%= link_to "Day Leads", campaign_lead_path(@campaign, all_day_leads(@campaign).find { |l| l.recall.nil? && l.sale.nil? && l.no.nil? }) %>:</td>
         <td><%= amt_day_leads(@campaign) %></td>
         <td><%= all_day_leads(@campaign).average(:dial_count).floor %></td>
       </tr>
