--- a/app/views/campaigns/_lead_breakdown.html.erb
+++ b/app/views/campaigns/_lead_breakdown.html.erb
@@ -4,19 +4,19 @@
   </thead>
   <tbody>
     <% sources(@campaign).each do |code| %>
-      <% if all_leads(@campaign, code).find { |l| l.recall.nil? } %>
+      <% if @campaign.leads.unreached.valid.by_source_code(code).find { |l| l.recall.nil? && l.sale.nil? && l.no.nil? } %>
         <tr>
-          <td><%= link_to code, campaign_lead_path(@campaign, all_leads(@campaign, code).find { |l| l.recall.nil? && l.sale.nil? && l.no.nil? }) %>:</td>
-          <td><%= amt_leads(@campaign, code) %></td>
-          <td><%= all_leads(@campaign, code).average(:dial_count).floor %></td>
+          <td><%= link_to code, campaign_lead_path(@campaign, @campaign.leads.unreached.valid.by_source_code(code).find { |l| l.recall.nil? && l.sale.nil? && l.no.nil? }) %>:</td>
+          <td><%= @campaign.leads.unreached.valid.by_source_code(code).count %></td>
+          <td><%= @campaign.leads.unreached.valid.by_source_code(code).average(:dial_count).floor %></td>
         </tr>
       <% end %>
     <% end %>
-    <% if amt_day_leads(@campaign) > 0 %>
+    <% if @campaign.leads.unreached.valid.day_leads.count > 0 %>
       <tr>
-        <td><%= link_to "Day Leads", campaign_lead_path(@campaign, all_day_leads(@campaign).find { |l| l.recall.nil? && l.sale.nil? && l.no.nil? }) %>:</td>
-        <td><%= amt_day_leads(@campaign) %></td>
-        <td><%= all_day_leads(@campaign).average(:dial_count).floor %></td>
+        <td><%= link_to "Day Leads", campaign_lead_path(@campaign, @campaign.leads.unreached.valid.day_leads.find { |l| l.recall.nil? && l.sale.nil? && l.no.nil? }) %>:</td>
+        <td><%= @campaign.leads.unreached.valid.day_leads.count %></td>
+        <td><%= @campaign.leads.unreached.valid.day_leads.average(:dial_count).floor %></td>
       </tr>
     <% end %>
   </tbody>
