--- a/app/views/campaigns/show.html.erb
+++ b/app/views/campaigns/show.html.erb
@@ -1,12 +1,12 @@
 <div class="row">
   <div class="col-md-8">
     <h1><%= @campaign.name %><span class="year"><%= @campaign.year %></span></h1>
-    <% if amt_leads(@campaign) == 0 %>
+    <% if @campaign.leads.count == 0 %>
       <h2>No leads yet.</h2>
     <% else %>
-      <h2>Total Leads: <%= amt_leads(@campaign) %></h2>
+      <h2>Total Unreached Leads: <%= @campaign.leads.unreached.valid.count %></h2>
         <p>Dialed through an avarage of
-        <%= all_leads(@campaign).average(:dial_count).floor %> times.</p>
+        <%= @campaign.leads.unreached.valid.average(:dial_count).floor %> times.</p>
         <h3>Breakdown by Source Code:</h3>
         <%= render partial: 'lead_breakdown', locals: { campaign: @campaign } %>
     <% end %>
