--- a/app/views/campaigns/_lead_breakdown.html.erb
+++ b/app/views/campaigns/_lead_breakdown.html.erb
@@ -3,18 +3,18 @@
     <tr><th>Source</th><th># leads</th><th>x dialed</th></tr>
   </thead>
   <tbody>
-    <% sources(@campaign).each do |code| %>
-      <% if @campaign.leads.unreached.valid.by_source_code(code).find { |l| l.recall.nil? && l.sale.nil? && l.no.nil? } %>
+    <% @campaign.sources.each do |code| %>
+      <% if @campaign.leads.unreached.valid.by_source(code).count > 0 %>
         <tr>
-          <td><%= link_to code, campaign_lead_path(@campaign, @campaign.leads.unreached.valid.by_source_code(code).find { |l| l.recall.nil? && l.sale.nil? && l.no.nil? }) %>:</td>
-          <td><%= @campaign.leads.unreached.valid.by_source_code(code).count %></td>
-          <td><%= @campaign.leads.unreached.valid.by_source_code(code).average(:dial_count).floor %></td>
+          <td><%= link_to code, campaign_lead_path(@campaign, @campaign.leads.unreached.valid.by_source(code).first) %>:</td>
+          <td><%= @campaign.leads.unreached.valid.by_source(code).count %></td>
+          <td><%= @campaign.leads.unreached.valid.by_source(code).average(:dial_count).floor %></td>
         </tr>
       <% end %>
     <% end %>
     <% if @campaign.leads.unreached.valid.day_leads.count > 0 %>
       <tr>
-        <td><%= link_to "Day Leads", campaign_lead_path(@campaign, @campaign.leads.unreached.valid.day_leads.find { |l| l.recall.nil? && l.sale.nil? && l.no.nil? }) %>:</td>
+        <td><%= link_to "Day Leads", campaign_lead_path(@campaign, @campaign.leads.unreached.valid.day_leads.first) %>:</td>
         <td><%= @campaign.leads.unreached.valid.day_leads.count %></td>
         <td><%= @campaign.leads.unreached.valid.day_leads.average(:dial_count).floor %></td>
       </tr>
