--- a/app/assets/stylesheets/leads.scss
+++ b/app/assets/stylesheets/leads.scss
@@ -67,6 +67,14 @@
   color: #c90;
 }
 
+.sold {
+  color: #9cc;
+}
+
+.no {
+  color: #c99;
+}
+
 #show-callback {
   border: 1px solid #BBE4F2;
   background: #EBF2F5;
