--- a/app/views/leads/show.html.erb
+++ b/app/views/leads/show.html.erb
@@ -64,10 +64,12 @@
 
 <div class="row">
   <div class="col-md-8">
+    <% unless Sale.find_by(lead: @lead) || No.find_by(lead: @lead) %>
     <% if Recall.find_by(lead: @lead) %>
       <%= render template: 'recalls/show', locals: { lead: @lead, callback: Recall.find_by(lead: @lead) } %>
     <% else %>
       <%= render template: 'recalls/new', locals: { lead: @lead } %>
+    <% end %>
     <% end %>
   </div>
   <div class="col-md-4">
