Previous no's and lead rounds marked

--- a/app/views/leads/show.html.erb
+++ b/app/views/leads/show.html.erb
@@ -83,5 +83,6 @@
     <% end %>
       <p>Dialed <%= @lead.dial_count %> times;
         Last: <%= time_ago_in_words(@last_dial) %> ago.</p>
+      <p>Round: <%= @lead.round + 1 %></p>
   </div>
 </div>
