--- a/app/views/campaigns/_second_round.html.erb
+++ b/app/views/campaigns/_second_round.html.erb
@@ -1,7 +1,7 @@
 <%= form_for @campaign, method: :patch do |f| %>
   <%= f.hidden_field :round, :value => @campaign.round + 1  %>
   <div class="form-group">
-    <%= f.label :days_old_nos, "Put back No's from how far back?" %>
+    <%= f.label :days_old_nos, "No's older than how many days?" %>
     <%= f.text_field :days_old_nos, placeholder: '? days' %>
   </div>
   <%= f.submit "Start #{(@campaign.round + 2).ordinalize} round on #{Time.now.strftime("%-m/%-d")}", class: 'btn btn-primary' %>
