Basic user totals and goals rundown

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -87,3 +87,10 @@
  .cb-campaign {
    color: #666;
  }
+
+ #float-menu {
+   border: 1px solid red;
+   padding: 10px;
+   position: fixed; right: 40px; top: 0px;
+
+ }
