--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -19,7 +19,7 @@
         <li><%= "#{sale.date.strftime("%-m/%-d")}: #{sale.lead.name1}, $#{sale.amount}" %> - <%= sale.lead.source_code %></li>
       <% end %>
     </ul>
-    <h4>Total: $<%= Sale.where(date: Time.now.beginning_of_week..Time.now, user: @user).sum("amount") %></h4>
+    <h4>Total: $<%= @user.week_total %></h4>
   </div>
   <div class="col-md-4 user-callbacks">
     <h3>Callbacks: <%= "none" if Recall.where(user: @user).count == 0 %></h3>
