--- a/app/assets/stylesheets/admin/admin.scss
+++ b/app/assets/stylesheets/admin/admin.scss
@@ -1,3 +1,18 @@
 .campaign-list span {
   padding: 2px 10px;
 }
+
+.goal-table th {
+  align: center;
+  padding: 5px 10px;
+}
+
+.goal-table td {
+  padding-right: 10px;
+  border-top: 1px solid #ccc;
+  text-align: right;
+}
+
+.goal-table .glyphicon {
+  color: #090;
+}
