--- a/app/views/welcome/about.html.erb
+++ b/app/views/welcome/about.html.erb
@@ -122,3 +122,23 @@ Caroline Courtney</a>.</p>
 </div>
 
 <hr/>
+
+<h3>Prospects &amp; Callbacks</h3>
+<p>
+  We also have the ability to 'save' prospects, in the form of 'callbacks'.
+  For those times when a sale absolutely, positively <em>cannot</em> be closed
+  on the first contact, there is a mechanism for keeping notes and saving your
+  own callbacks aside from the general leadbase.  They will stay that way  until
+  the user gives them up, or they buy, or say no.
+</p>
+
+<h3>User Dashboard</h3>
+<p>
+  When in doubt, check out your user 'Home'.
+   It contains all your callbacks, and a mechanism for setting and tracking your
+   own goals.  In addition, there are 'manager' and 'admin' dashboards for all
+   the cool extra stuff they can do.  But if you're a regular user, enjoy
+   keeping it simple!
+</p>
+
+<hr/>
