--- a/app/views/admin/admin/index.html.erb
+++ b/app/views/admin/admin/index.html.erb
@@ -11,38 +11,69 @@
 
 <hr/>
 
-<% if current_user.admin? %>
-
-  <div class="row">
-    <div class="col-md-8">
-      <h3>Totals for the week:</h3>
-      <% @week_goal = 1 %>
-      <table class="goal-table">
-        <thead>
+<div class="row">
+  <div class="col-md-4">
+    <h3>Totals for the week:</h3>
+    <% @week_goal = Goal.first.amount %>
+    <table class="goal-table">
+      <thead>
+        <tr>
+          <th>User</th><th>Week</th><th>Goal?</th>
+        </tr>
+      </thead>
+      <tbody>
+        <% User.all.each do |user| %>
           <tr>
-            <th>User</th><th>Week</th><th>Goal?</th>
+            <td><%= user.nickname %></td>
+            <td>$<%= user.week_total %></td>
+            <td><% if (user.week_total >= @week_goal) %><span class="glyphicon glyphicon-ok"></span><% end %></td>
           </tr>
-        </thead>
-        <tbody>
-          <% User.all.each do |user| %>
-            <tr>
-              <td><%= user.nickname %></td>
-              <td>$<%= user.week_total %></td>
-              <td><% if (user.week_total >= @week_goal) %><span class="glyphicon glyphicon-ok"></span><% end %></td>
-            </tr>
-          <% end %>
-        </tbody>
-      </table>
-    </div>
-    <div class="col-md-4">
-      <h3>Goals for the week:</h3>
-      <p>$<%= @week_goal %> in new sales from any campaign.</p>
-    </div>
+        <% end %>
+      </tbody>
+    </table>
   </div>
+  <div class="col-md-4">
+    <h3>Totals for today:</h3>
+    <% @week_goal = Goal.first.amount %>
+    <table class="goal-table">
+      <thead>
+        <tr>
+          <th>User</th><th>Today</th><th>Goal?</th>
+        </tr>
+      </thead>
+      <tbody>
+        <% User.all.each do |user| %>
+          <tr>
+            <td><%= user.nickname %></td>
+            <td>$<%= user.today_total %></td>
+            <td><% if (user.today_total >= @week_goal) %><span class="glyphicon glyphicon-ok"></span><% end %></td>
+          </tr>
+        <% end %>
+      </tbody>
+    </table>
+  </div>
+  <div class="col-md-4">
+    <h3>Curent Individual Goals:</h3>
+    <ul>
+      <% Goal.where(individual: true).current.each do |goal| %>
+        <li><%= goal.individual ? "Each person do" : "Room does" %> $<%= goal.amount %> <%= "in #{Campaign.find(goal.campaign_id).name}" if goal.campaign_id %> <%= goal.weekly ? "this week" : "today" %>.</li>
+      <% end %>
+    </ul>
+    <h4><%= link_to "Goals Index", admin_goals_path %></h4>
+  </div>
+</div>
+
+<hr/>
+<h2>Current Room Goals:</h2>
+<ul>
+  <% Goal.where(individual: false).current.each do |goal| %>
+    <li><%= goal.individual ? "Each person do" : "Room does" %> $<%= goal.amount %> <%= "in #{Campaign.find(goal.campaign_id).name}" if goal.campaign_id %> <%= goal.weekly ? "this week" : "today" %> -
+      <%= goal.weekly ? User.room_week_total : User.room_day_total %>/<%= goal.amount %> - <%= ((((goal.weekly ? User.room_week_total : User.room_day_total).to_f)/ goal.amount.to_f) * 100).round%>% </li>
+  <% end %>
+</ul>
 
 
-  <hr/>
-<% end %>
+<hr/>
 
 <h3>Index of all leads</h3>
 <p class="campaign-list">
@@ -66,3 +97,5 @@
   </p>
   <%= link_to "Add a New Campaign", new_campaign_path, class: 'btn btn-primary' %>
 <% end %>
+
+<hr/>
