--- a/app/views/admin/admin/index.html.erb
+++ b/app/views/admin/admin/index.html.erb
@@ -14,7 +14,7 @@
 <div class="row">
   <div class="col-md-4">
     <h3>Totals for the week:</h3>
-    <% @week_goal = Goal.first.amount %>
+    <% @week_goal = 2500 %>
     <table class="goal-table">
       <thead>
         <tr>
@@ -34,7 +34,7 @@
   </div>
   <div class="col-md-4">
     <h3>Totals for today:</h3>
-    <% @week_goal = Goal.first.amount %>
+    <% @week_goal = 500 %>
     <table class="goal-table">
       <thead>
         <tr>
