--- a/app/views/admin/admin/index.html.erb
+++ b/app/views/admin/admin/index.html.erb
@@ -10,60 +10,6 @@
 <%= render partial: 'search_results/search_form' %>
 
 <hr/>
-
-<div class="row">
-  <div class="col-md-4">
-    <h3>Totals for the week:</h3>
-    <% @week_goal = find_weekly_goal %>
-    <table class="goal-table">
-      <thead>
-        <tr>
-          <th>User</th><th>Week</th><th>Goal?</th>
-        </tr>
-      </thead>
-      <tbody>
-        <% User.all.each do |user| %>
-          <tr>
-            <td><%= user.nickname %></td>
-            <td>$<%= user.week_total %></td>
-            <td><% if (user.week_total >= @week_goal) %><span class="glyphicon glyphicon-ok"></span><% end %></td>
-          </tr>
-        <% end %>
-      </tbody>
-    </table>
-  </div>
-  <div class="col-md-4">
-    <h3>Totals for today:</h3>
-    <% @daily_goal = find_daily_goal %>
-    <table class="goal-table">
-      <thead>
-        <tr>
-          <th>User</th><th>Today</th><th>Goal?</th>
-        </tr>
-      </thead>
-      <tbody>
-        <% User.all.each do |user| %>
-          <tr>
-            <td><%= user.nickname %></td>
-            <td>$<%= user.today_total %></td>
-            <td><% if (user.today_total >= @daily_goal) %><span class="glyphicon glyphicon-ok"></span><% end %></td>
-          </tr>
-        <% end %>
-      </tbody>
-    </table>
-  </div>
-  <div class="col-md-4">
-    <h3>Curent Individual Goals:</h3>
-    <ul>
-      <% Goal.where(individual: true).current.each do |goal| %>
-        <li><%= goal.individual ? "Each person do" : "Room does" %> $<%= goal.amount %> <%= "in #{Campaign.find(goal.campaign_id).name}" if goal.campaign_id %> <%= goal.weekly ? "this week" : "today" %>.</li>
-      <% end %>
-    </ul>
-    <h4><%= link_to "Goals Index", admin_goals_path %></h4>
-  </div>
-</div>
-
-<hr/>
 <h2>Current Room Goals:</h2>
 <ul>
   <% Goal.where(individual: false).current.each do |goal| %>
@@ -75,9 +21,63 @@
 
 <hr/>
 
+<div class="row">
+  <div class="col-md-4">
+    <h3>Curent Individual Goals:</h3>
+    <ul>
+      <% Goal.where(individual: true).current.each do |goal| %>
+        <li><%= goal.individual ? "Each person do" : "Room does" %> $<%= goal.amount %> <%= "in #{Campaign.find(goal.campaign_id).name}" if goal.campaign_id %> <%= goal.weekly ? "this week" : "today" %>.</li>
+      <% end %>
+    </ul>
+    <h4><%= link_to "Goals Index", admin_goals_path %></h4>
+  </div>
+  <div class="col-md-4">
+    <h3>Totals for the week:</h3>
+    <% @week_goal = find_weekly_goal %>
+    <table class="goal-table">
+      <thead>
+        <tr>
+          <th>User</th><th>Week</th><th>Goal: $<%= find_weekly_goal %></th>
+        </tr>
+      </thead>
+      <tbody>
+        <% User.all.each do |user| %>
+          <tr>
+            <td><%= user.nickname %></td>
+            <td>$<%= user.week_total %></td>
+            <td><% if (user.week_total >= find_weekly_goal) %><span class="glyphicon glyphicon-ok"></span><% end %></td>
+          </tr>
+        <% end %>
+      </tbody>
+    </table>
+  </div>
+  <div class="col-md-4">
+    <h3>Totals for today:</h3>
+    <% @daily_goal = find_daily_goal %>
+    <table class="goal-table">
+      <thead>
+        <tr>
+          <th>User</th><th>Today</th><th>Goal: $<%= find_daily_goal %></th>
+        </tr>
+      </thead>
+      <tbody>
+        <% User.all.each do |user| %>
+          <tr>
+            <td><%= user.nickname %></td>
+            <td>$<%= user.today_total %></td>
+            <td><% if (user.today_total >= find_daily_goal) %><span class="glyphicon glyphicon-ok"></span><% end %></td>
+          </tr>
+        <% end %>
+      </tbody>
+    </table>
+  </div>
+</div>
+
+<hr/>
+
 <h3>Index of all leads</h3>
 <p class="campaign-list">
-  <% Campaign.all.each do |campaign| %>
+  <% @campaigns.each do |campaign| %>
     <span><%= link_to campaign.name, campaign_leads_path(campaign) %></span>
   <% end %>
 </p>
@@ -85,13 +85,13 @@
 <% if current_user.admin? %>
   <h3>Edit Campaigns</h3>
   <p class="campaign-list">
-    <% Campaign.all.each do |campaign| %>
+    <% @campaigns.each do |campaign| %>
       <span><%= link_to campaign.name, edit_campaign_path(campaign) %></span>
     <% end %>
   </p>
   <h3>Import/Export leads to Campaigns</h3>
   <p class="campaign-list">
-    <% Campaign.all.each do |campaign| %>
+    <% @campaigns.each do |campaign| %>
       <span><%= link_to campaign.name, campaign_path(campaign) %></span>
     <% end %>
   </p>
